--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Multitouch Gesture Recognizer using Python and PyMt
 
-Dependencies:
+Dependencies
 - Python 2.7.2
 - PyMT (http://pymt.eu/)
+
+HOW TO
+- Run the recorder 'pymt recorder.py {gestureName}', for example if the gesture is a circle run 'pymt recorder.py circle'. The recorder will save the template gestures in the folder template inside the folder name
